--- a/js/sfbrowser/browser.html
+++ b/js/sfbrowser/browser.html
@@ -11,7 +11,7 @@
 			<div id="fbwin">
 				<div id="winbrowser">
 					<div class="sfbheader">
-						<h3>SFBrowser</h3>
+						<h3>Выбрать файл</h3>
 						<div id="loadbar">
 							<div></div>
 							<span>Loading</span>
